<resources>
    <string name="app_name">Financial_app</string>
    <string name="main_fragment">Главная</string>
    <string name="transaction_fragment">Транзакции</string>
    <string name="purposes_fragment">Цели</string>
    <string name="set_fragment">Настройки</string>
    <string name="enter_name">Введите имя:</string>
    <string name="first_setting">Первыичные настройки пользователя</string>
    <string name="enter_currency">Введите название основной валюты:</string>
    <string name="enter_short_currency">Введите короткое* название валюты:</string>
    <string name="save_button">Сохранить</string>
    <string name="correction">*короткое название должно содержать 1-3 символа</string>
</resources>